# SLH

./: README.md
TE1/: ReponseQuestions.md
TE1/midterm-files/: RenduTE1_Junod.tar.xz  market.c
TE1/midterm-files/RenduTE1_Junod/: SLH-2024-midterm.md
TE1/midterm-files/contact-tracing/: Cargo.toml
TE1/midterm-files/contact-tracing/src/: main.rs
exam/to-give/karamel/: .gitignore  Cargo.toml  rep_questions.md  store.json
exam/to-give/karamel/src/: authorization.rs  db.rs  lib.rs  model.rs  password.rs  protocol.rs  utils.rs
exos/ex01/: hello
exos/ex03/: Reverse.java  reverseString  reverseString.cpp
exos/ex03/SLH-exo03/rstr/src/: lib.rs
exos/ex05/mksa/: Cargo.toml
exos/ex05/mksa/src/: constgen.rs  enums.rs  lib.rs  newtypes.rs  traits.rs  zst.rs
exos/exo06/superstat/: Cargo.toml
exos/exo06/superstat/src/: main.rs
exos/exo08/miniauth/: Cargo.toml
exos/exo08/miniauth-solution/miniauth/: Cargo.toml
exos/exo08/miniauth-solution/miniauth/src/: authenticator.rs  database.rs  main.rs
exos/exo08/miniauth/src/: authenticator.rs  database.rs  main.rs
exos/exo09/authorization/src/: access_control.rs  main.rs
exos/exo09/authorization_sol/: Cargo.toml
exos/exo09/authorization_sol/accessControl/: access_control.csv
exos/exo09/authorization_sol/src/: main.rs
exos/exo10/: main(2).rs
exos/exo10/lottery/: Cargo.toml
exos/exo10/lottery/src/: main.rs
exos/exo11/: main(2).rs
exos/exo11/minilog/: Cargo.toml
exos/exo11/minilog/src/: main.rs  users.rs
exos/injectionSQL/: bruno.json  getSecret.bru  getTable.bru
exos/src/: login.rs  robots.rs
lab02_SLH/to_give/lab02/: .gitignore  Cargo.toml  Questions.md
lab02_SLH/to_give/lab02/src/: database.rs  main.rs  utils.rs
lab02_SLH/to_give/lab02/src/backend/: handlers_auth.rs  handlers_unauth.rs
lab02_SLH/to_give/lab02/src/utils/: input.rs  webauthn.rs
lab03_karak/: Cargo.toml  report.md
lab03_karak/access_control/: model.conf  policy.csv
lab03_karak/src/: services.rs
lab03_karak/src/utils/: input_validation.rs  password_utils.rs
test-app/: Cargo.toml
test-app/src/: main.rs
