[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["uuid", "json"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
biscuit-auth = "3.1.1"
rand = "0.8.5"
lazy_static = "1.4"