[package]
name = "superstat"
version = "0.1.0"
authors = ["SEC"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
regex = "1"
lazy_static = "1.1.0"
itertools = "0.10.0"
anyhow = "1.0.93"
smallvec = "1.13.2"
