[package]
name = "authorization"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.aduc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
read_input = "0.8"
regex = "1.10"
casbin = { version = "2.1", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.10.0", features = ["fs", "io-util"] }
